fix splash page spacing

--- a/frontend/src/components/SplashPage/SplashPage.css
+++ b/frontend/src/components/SplashPage/SplashPage.css
@@ -70,6 +70,7 @@
     height: 100%;
     width: 516.39px;
     justify-content: space-around;
+    margin-left: calc(10% - 100px);
 }
 
 
